# expense_tracker_v2

./: .coveragerc  .dockerignore  .env.example  .gcloudignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/.ai/: REPORT_CONVENTION.md
docs/.ai/specs/: expense_tracker_spec.yaml
docs/deploy/: backlog-deploy.md  next-session-kickoff.md  production-roadmap.md  twa-build.md
docs/dev/: development-setup.md  expense-tracker-backend.service  expense-tracker-frontend.service  supabase-setup.md
docs/superpowers/plans/: 2026-03-25-foundation.md  2026-03-26-csv-importer.md  2026-03-26-htmx-views.md  2026-03-27-agents-sp5b.md  2026-03-27-ai-assistant-sp5a.md  2026-03-27-dashboard.md  2026-03-27-memory-system-sp5c.md  2026-06-11-monthly-cockpit.md  2026-06-12-pwa-sprint10.md  2026-06-14-003-design-adjustments.md  2026-06-14-005-edit-modals-and-consolidado-monthly.md  2026-06-14-multimodal-input.md  2026-06-18-entries-launch-vs-billing.md  2026-06-19-systemic-expenses-ux-and-recurrence.md  2026-06-20-projection-whatif-and-analytics.md  2026-06-21-orcamentos-and-projection-estimator.md  2026-06-22-dashboard-economia-tendencia.md  2026-06-22-dashboard-redesign.md  2026-06-23-receipt-propose-confirm.md
docs/superpowers/specs/: 2026-03-25-expense-tracker-design.md  2026-03-26-csv-importer-design.md  2026-03-26-htmx-views-design.md  (+18 more)
scripts/: gen_pwa_icons.py  setup-friday-git.md
scripts/git-hooks/: apply-changes.sh  post-checkout  post-merge  post-rewrite
(+289 files in other folders)
