[project]
name = "expense-tracker"
version = "0.1.0"
description = "Personal expense tracking system with AI assistant"
requires-python = ">=3.12"
dependencies = [
    "django>=6.0",
    "django-tailwind-cli>=4.5.1",
    "whitenoise>=6.12.0",
    "psycopg[binary]>=3.2",
    "python-dotenv>=1.0",
    "django-htmx>=1.27.0",
    "djangorestframework>=3.17.1",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
pythonpath = ["src/backend"]
testpaths = ["src/backend"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[dependency-groups]
dev = [
    "coverage>=7.13.4",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-django>=4.12.0",
    "pytest-bdd>=8.0",
    "model-bakery>=1.20",
    "ruff>=0.15.4",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src/backend"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "DJ",  # flake8-django
    "S",   # flake8-bandit
]
ignore = [
    "S101",  # allow assert in tests
]

[tool.ruff.lint.per-file-ignores]
"*/migrations/*" = ["E501"]
"*/tests/*" = ["S106"]

[tool.ruff.lint.isort]
known-first-party = ["config", "core", "finances"]

[tool.ruff.format]
quote-style = "double"
